<resources>
    <string name="app_name">Herbal Guide</string>
    <string name="app_name_A"><font color="#3F48CC">دليل</font> <font color="#22B14C">الأعشاب</font></string>
    <string name="app_name_E"><font color="#3F48CC">Herbal</font> <font color="#22B14C">Guide</font></string>
    <string name="welcomeText">أهلا بكم في تطبيق دليل الأعشاب الخاص بالممارسين الصحين</string>
    <string name="entry">دخول</string>
    <string name="or">أو</string>
    <string name="text1">مرحبًا!</string>
    <string name="login_text1">مرحبًا بعودتك!</string>
    <string name="login_text2">الرجاء إدخال التفاصيل الخاصة بك</string>
    <string name="register_text1">انشاء حساب جديد</string>
    <string name="register_now">سجل الان</string>
    <string name="email_mobile_hint">البريد الالكتروني / رقم الجوال</string>
    <string name="password_hint">كلمة المرور</string>
    <string name="forgot_your_password">نسيت كلمة المرور</string>
    <string name="dont_have_account">ليس لديك حساب ؟</string>
    <string name="the_name">الاسم</string>
    <string name="submit">إرسال</string>
    <string name="the_other_name">العائلة</string>
    <string name="the_family"><![CDATA[العائلة ]]></string>
    <string name="function">الوظيفة</string>
    <string name="back_to_main_menu">العودة للقائمة الرئيسية</string>
    <string name="the_evaluation_sent_by_you">تم استلام التقيم المرسل من قبلكم نشكر مشاركتكم ورايكم يهمنا</string>
    <string name="question_1">ماهي مدى استفادتك من المعلومات المتوفرة ؟</string>
    <string name="question_2">ماهي مدى استفادتك من المعلومات المتوفرة ؟</string>
    <string name="question_3">هل استفدت من المعلومة المتاحة ؟</string>
    <string name="question_4">هل استفدت من المعلومة المتاحة ؟</string>
    <string name="question_5">هل تعتقد بأن المعلومات المتوفرة مفيدة ؟</string>
    <string name="question_6">هل استفدت من المعلومة المتاحة ؟</string>
    <string name="question7">ماهي مدى استفادتك من المعلومات المتوفرة ؟</string>
    <string name="question_8">ماهي مدى استفادتك من المعلومات المتوفرة ؟</string>
    <string name="question_9">ماهي مدى استفادتك من المعلومات المتوفرة ؟</string>
    <string name="question_10">هل استفدت من المعلومة المتاحة ؟</string>
    <string name="question_11">هل تعتقد بأن المعلومات المتوفرة مفيدة ؟</string>
    <string name="question_12">هل تعتقد بأن المعلومات المتوفرة مفيدة ؟</string>
    <string name="finish_evaluation"><![CDATA[انهاء التقييم ]]></string>
    <string name="search_hint">" الرجاء تحديد البحث المطلوب"</string>
    <string name="evaluate_the_information">تـقيم المعلومة</string>
    <string name="scientificname">الاسم العلمي</string>
    <string name="thepartoftheplantused">الجزء المستخدم</string>
    <string name="medicine_properties_and_used">الاستخدامات  والخصائص الطبية</string>
    <string name="side_effects">الاثار الجانبية وموانع الاستخدام والتداخلات الدوائية</string>
    <string name="contraindications">ينصحبعدم مشاركته مع بعض الاصناف الدوائية</string>
    <string name="interaction_with_pharma">	الاستخدام اثناء الحمل</string>
    <string name="last">الاستخدام لدى الاطفال</string>
    <string name="ques_head">يهدف تطبيق دليل الأعشاب الى تزويد صيادلة المجتمع بمصدر للمعلومات حول استخدامات الاعشاب الشائعة وتداخلاتها الدوائية.</string>
    <string name="ques_head1">بالنظر الى مستوى معرفتك بالأعشاب الطبية واستخداماتها الشائعة ،والتعارضات الطبية لها، الرجاء الاجابة على الاسئلة التالية  حيث  يوجد اجابة صحيحة واحدة للاسئلة من(1-15) : </string>
    <string name="ques_head2">الرجاء الاجابة على كل ممايلي:</string>
    <string name="ques1">1. يمكن استخدام عقار الصبار لعلاج : </string>
    <string name="ques2">	2. يتمتع الشاي الاخضر بالخصائص الطبية التالية ماعدا: </string>
    <string name="ques3">3. الجزء الطبي المستخدم من عقار الخلة هو:</string>
    <string name="ques4">4. يمكن استخدام عقار الكركم في الحالات التالية ما عدا:</string>
    <string name="ques5">5. يمكن استخدام عقار الاوكاليبتوس لعلاج:</string>
    <string name="ques6">6. يعتبر عقار ذنب الخيل فعال في علاج:</string>
    <string name="ques7">7. يتمتع عقار مشرات الفوقس البحري بالخصائص والاستخدامات  الطبية التالية ماعدا:</string>
    <string name="ques8">8. يمكن استخدام عقار عرق السوس في الحالات التالية ماعدا:</string>
    <string name="ques9">9. يمكن استخدام عقار البابونج في الحالات التالية ماعدا:</string>
    <string name="ques10">10. يستخدم عقار المليسة لعلاج :</string>
    <string name="ques11">11. يتمتع عقار الجنسنغ بالخصائص والاستخدامات الطبية التالية ماعدا:</string>
    <string name="ques12">12. اي من الاعشاب التالية يملك فعالية لعلاج الامساك والاسهال:</string>
    <string name="ques13">13. يمكن استخدم عقار البردقوش لعلاج الحالات التالية ماعدا:</string>
    <string name="ques14">14. يمنع استخدام عقار السنا في الحالات التالية ماعدا:</string>
    <string name="ques15">15.  يمكن استخدام عقار الزعتر لعلاج:</string>
    <string name="ques16">16. يمكن استخدام جذور الزنجبيل لعلاج الغثيان الصباحي لدى الحوامل:</string>
    <string name="ques17">17. يمكن استخدام الاوكاليبتوس لعلاج السعال والتهاب المسالك التنفسية لدى الرضع والاطفال :</string>
    <string name="ques18">18. ينصح الاشخاص المصابين بارتفاع الضغط الدموي وفرط نشاط الغدة  الدرقية والقرحة المعدية بعدم الاكثار من استهلاك القهوة:</string>
    <string name="ques19">19. يمكن للاشخاص المصابين بالملاريا والذين يستخدمون دواء الكلوروكين  من استخدام الكركديه:</string>
    <string name="ques20">20. يمكن للاشخاص الذين يستخدمون المهدئات من فئة البينزوديازبينات من استخدام الخزامى: </string>
    <string name="ques21">21. يمكن استخدام عقار المريمية لعلاج فرط التعرق:</string>
    <string name="ques22">22. يمكن استخدام الحبة السوداء لعلاج السعال والربو وامراض المفاصل:</string>
    <string name="ques23">23. يمكن استخدام زهرة الالماسة لعلاج الرمل وحصوات الكلى لدى الحوامل:</string>
    <string name="ques24">24. يمكن استخدام الاس لعلاج الالتهابات المصاحبة لنزلات البرد لدى الاطفال:</string>
    <string name="ques25">25. يتمتع عقار اكليل الجبل بخصائص مقوية ومحسنة للذاكرة </string>
    <string name="ques1_point1">فقدان الشهية</string>
    <string name="ques1_point2">القلق والارق</string>
    <string name="ques1_point3">الامساك</string>
    <string name="ques1_point4">اضطرابات عسر الهضم</string>
    <string name="ques2_point1">منشط للجهاز العصبي المركزي</string>
    <string name="ques2_point2">يقلل من مستوى الدهون في الدم</string>
    <string name="ques2_point3">يقلل من مستوى السكر في الدم</string>
    <string name="ques2_point4">مهدىء وحال للقلق</string>
    <string name="ques3_point1">الاوراق</string>
    <string name="ques3_point2">الجذور</string>
    <string name="ques3_point3">الثمار</string>
    <string name="ques3_point4">النبات كاملا</string>
    <string name="ques4_point1">اضطرابات عسر الهضم</string>
    <string name="ques4_point2">فقدان الشهية</string>
    <string name="ques4_point3">حصوات المرارة</string>
    <string name="ques4_point4">للوقاية من تسمم الكبد</string>
    <string name="ques5_point1">الامساك</string>
    <string name="ques5_point2">اضطرابات عسر الهضم</string>
    <string name="ques5_point3">السعال وتشنج القصبات</string>
    <string name="ques5_point4">التهابات الامعاء والقنوات الصفراوية</string>
    <string name="ques6_point1">التهابات المسالك البولية وحصوات الكلى والمثانة</string>
    <string name="ques6_point2">الامساك</string>
    <string name="ques6_point3">اضطرابات عسر الهضم</string>
    <string name="ques6_point4">التهابات الجهاز الهضمي</string>
    <string name="ques7_point1">يخفض مستوى السكر في الدم</string>
    <string name="ques7_point2">فعال لعلاج السمنة وتخفيض الوزن</string>
    <string name="ques7_point3">يستخدم لعلاج اضطرابات الغدة الدرقية</string>
    <string name="ques7_point4">يستخدم لعلاج السعال</string>
    <string name="ques8_point1">للوقاية من القرحة المعدية</string>
    <string name="ques8_point2">لعلاج ارتفاع الضغط الدموي</string>
    <string name="ques8_point3">لعلاج التهاب الكبد الفيروسي</string>
    <string name="ques8_point4">لعلاج التهاب المعدة</string>
    <string name="ques9_point1">لعلاج السعال والتهاب الشعب التنفسية</string>
    <string name="ques9_point2">لعلاج التهاب الاغشية المخاطية في الجهازين التنفسي والهضمي</string>
    <string name="ques9_point3">لعلاج التهاب الجلد والجروح والقروح</string>
    <string name="ques9_point4">لعلاج التهابات المسالك البولية</string>
    <string name="ques10_point1">فقدان الشهية واضطرابات عسر الهضم</string>
    <string name="ques10_point2">ارتفاع الضغط الدموي</string>
    <string name="ques10_point3">التهابات الجهاز التنفسي</string>
    <string name="ques10_point4">الارق والعصبية واضطرابات النوم</string>
    <string name="ques11_point1">معزز للمناعة</string>
    <string name="ques11_point2">محفز للجهاز العصبي المركزي</string>
    <string name="ques11_point3">مضاد للسرطان</string>
    <string name="ques11_point4">فعال في علاج اضطرابات والتهابات الجهاز الهضمي</string>
    <string name="ques12_point1">الصبار</string>
    <string name="ques12_point2">السنا</string>
    <string name="ques12_point3">البيسيليوم</string>
    <string name="ques12_point4">النعناع البري</string>
    <string name="ques13_point1">الاضطرابات الهضمية والتهابات الجهاز التنفسي</string>
    <string name="ques13_point2">التهابات المجاري البولية وحصوات الكلى والمثانة</string>
    <string name="ques13_point3">اضطرابات الهرمونات والدورة الشهرية</string>
    <string name="ques13_point4">يساعد لعلاج متلازمة المبيض متعدد الكيسات</string>
    <string name="ques14_point1">الانسداد المعوي</string>
    <string name="ques14_point2">التهاب الزائدة الدودية</string>
    <string name="ques14_point3">الامساك</string>
    <string name="ques14_point4">التهاب الامعاء الحاد</string>
    <string name="ques15_point1">فقدان الشهية</string>
    <string name="ques15_point2">اضطرابات عسر الهضم</string>
    <string name="ques15_point3">التهابات الجهاز الهضمي والبولي</string>
    <string name="ques15_point4">السعال والتهابات الجهاز التنفسي</string>
    <string name="ques16_point1">صح</string>
    <string name="ques16_point2">خطا</string>
    <string name="survey_head">يرجى الاجابة على اسئلة الاستبانة التالية بعد استخدام تطبيق دليل الاعشاب حيث ان اجاباتك ستاعدنا في فهم جوانب التطبيق التي تهتم بها والجوانب التي ترضيك الرجاء قراءة كل عبارة والاشارة الى مدى موافقتك او عدم موافقتك حيث ان موافق بشدة تعني(5 ) نقاط وغيرموافق بشدة تعني( 1 )</string>
    <string name="survey_point1">موافق بشدة</string>
    <string name="survey_point2">موافق</string>
    <string name="survey_point3">غير متأكد </string>
    <string name="survey_point4">غير موافق</string>
    <string name="survey_point5">غير موافق بشدة</string>
    <string name="survey_ques1">1.المحتوى مرتبط بالأهداف التي من اجلها تم تطوير التطبيق الالكتروني.</string>
    <string name="survey_ques2">2. المحتوى دقيق وحديث من الناحية العلمية وخالي من الأخطاء اللغوية والقواعدية.</string>
    <string name="survey_ques3">3. المحتوى يراعي خبرات ومعارف الصيادلة السابقة حول الأعشاب الطبيعية.</string>
    <string name="survey_ques4">4. عناصر محتوى التطبيق الالكتروني منظمة ومترابطة فيما بينها بطريقة واضحة ومحددة.</string>
    <string name="survey_ques5">5. اللغة والمصطلحات المستخدمة في صياغة المحتوى واضحة ومفهومة بالنسبة للصيادلة.</string>
    <string name="survey_ques6">6. محتوى التطبيق  يعمل على ربط المعومات الجديدة بالمعلومات السابقة المتوفرة لدى الصيادلة حول الأعشاب الطبيعية.</string>
    <string name="survey_ques7">7. يساعد التطبيق الصيادلة في الوصول الى المعرفة والمعلومات بأنفسهم من خلال المراجع التي يتضمنها التطبيق.</string>
    <string name="survey_ques8">8. فقرات المحتوى مرتبة ومنظمة بطريقة تسهل على الصيادلة ادراكها واكتسابها.</string>
    <string name="survey_ques9">9. المعلومات الموجودة في التطبيق الالكتروني كافية وذات صلة مباشرة بالأعشاب الطبيعية الشائعة.</string>
    <string name="survey_ques10">10. المعلومات ت الموجودة في التطبيق الالكتروني صحيحة وترتكز على مراجع معتمدة.</string>
    <string name="survey_ques11">11. طريقة التنقل بين صفحات التطبيق الالكتروني الرئيسية والفرعية سهلة وواضحة.</string>
    <string name="survey_ques12">12. تناسق وجمالية تصميم صفحات التطبيق الالكتروني الرئيسية والفرعية.</string>
</resources>