<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryActivity">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="12dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/herbal_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_ui_text_regular"
            android:text="@string/app_name_A" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/sf_ui_text_regular"
            android:text="@string/app_name_E" />

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/logo"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@color/green_light" />

    <EditText
        android:id="@+id/emailNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/edittext"
        android:fontFamily="@font/arial_regular"
        android:hint="@string/email_mobile_hint"
        android:inputType="textPersonName"
        android:padding="15dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailNumber"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/edittext"
        android:padding="15dp"
        android:gravity="end"
        android:fontFamily="@font/arial_regular"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:textSize="16sp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/forgot_your_password"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/entryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPassword"
        android:layout_marginStart="12dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/green_light"
        android:padding="20dp"
        android:text="@string/entry"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@id/entryBtn">

        <TextView
            android:id="@+id/registerNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:fontFamily="@font/sf_ui_text_regular"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/sf_ui_text_regular" />

    </LinearLayout>

</RelativeLayout>