<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetActivity">


    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="12dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/herbal_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_ui_text_regular"
            android:text="@string/app_name_A" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/sf_ui_text_regular"
            android:text="@string/app_name_E" />

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/logo"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@color/green_light" />

    <EditText
        android:id="@+id/emailNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/edittext"
        android:fontFamily="@font/arial_regular"
        android:hint="@string/email_mobile_hint"
        android:inputType="textPersonName"
        android:padding="15dp" />

    <Button
        android:id="@+id/entryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailNumber"
        android:layout_marginStart="12dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/green_light"
        android:padding="20dp"
        android:text="@string/entry"
        android:textAllCaps="false"
        android:textSize="20sp" />

</RelativeLayout>